src/tests/e2e/snapshots/zellij__tests__e2e__cases__accepts_basic_layout.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot

---
╭ Pane #1 ─────────────╮╭ Pane #2 ─────────────────────────────────────────────────────────────────────────────────────╮
│$ █                   ││$                                                                                             │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
│                      ││                                                                                              │
╰──────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Pane #3 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│$                                                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
