src/tests/e2e/snapshots/zellij__tests__e2e__cases__cannot_split_terminals_vertically_when_active_terminal_is_too_small.snap
---
source: src/tests/e2e/cases.rs
assertion_line: 243
expression: last_snapshot
---
 Zellij 
┌──────┐
│$ █   │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
└──────┘
 Ctrl +
